# python-challenge

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  wait-for-entrypoint.sh
backend/authentication/: authentication.py  authentication_mixins.py  models.py  tests.py  urls.py  views.py
backend/authentication/api/: api.py  serializers.py
backend/authentication/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/task/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/task/migrations/: 0001_initial.py
postgres/: Dockerfile
